# Robot2020

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.wpilib/: wpilib_preferences.json
gradle/wrapper/: gradle-wrapper.properties
src/main/java/frc/robot/: JCP.java  RPCP.java  Robot.java  RobotMap.java  test.java
src/main/java/frc/robot/commands/automonus/: AngleGenerator.java  CWColour.java  CWCounter.java  FollowSpline.java  FollowSplineV2.java  FollowSplineV3.java  Follower2.java
src/main/java/frc/robot/commands/teleoperated/: SimpleAuto.java  Teleop.java  TeleopCW.java  TeleopClimber.java  TeleopDrivetrain.java  TeleopElevator.java  TeleopPowerCells.java
src/main/java/frc/robot/subsystems/: Drivetrain.java
src/main/java/frc/robot/subsystems/models/: Climber.java  ClimberImpl.java  ColourWheel.java  ColourWheelImpl.java  Drivetrain.java  DrivetrainImpl.java  Elevator.java  ElevatorImpl.java  PowerCells.java  PowerCellsImpl.java
src/main/java/frc/robot/utils/drivers/: LazyTalonSRX.java  (+1 more)
vision/: CMakeLists.txt  build.gradle
vision-python/: build.gradle  communicator.py  main.py  processor.py
vision-python/resources/: vision.service
vision-python/src/: led.py  main.py  rpcp.py
vision/resources/system/: vision.service
vision/src/main/cpp/: main.cpp
vision/src/main/cpp/networking/: Server.cpp  Server.h
vision/src/main/cpp/processing/: CameraFetcher.cpp  CameraFetcher.h  Command.h  ProcessingThread.cpp  ProcessingThread.h  Processor.cpp  Processor.h  VideoStreamer.cpp  VideoStreamer.h
vision/src/main/cpp/processing/processing_tools/: quickMaths.cpp  quick_maths.h
vision/src/main/cpp/processing/utils/: Command.h  Frame.h  ObjectDetection.cpp  ObjectDetection.h  QuickMaths.cpp  QuickMaths.h
